[gd_scene load_steps=3 format=3 uid="uid://bt6f4cojdqahy"]

[ext_resource type="Script" path="res://scripts/shooter_enemy.gd" id="1_3bwpb"]
[ext_resource type="Texture2D" uid="uid://ml5w4m1sjbec" path="res://shooting_enemy.png" id="2_jf0v1"]

[node name="ShooterEnemy" type="Area2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_3bwpb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jf0v1")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-24, -28, 33, -1, -25, 29, -9, 0)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-24, 0)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(32, 0)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="destroyed" from="." to="." method="_on_destroyed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
